content (html) : add text to the section "Spartok"

--- a/index.html
+++ b/index.html
@@ -304,10 +304,13 @@
                     Около 525-490 гг. до н.э. Пантикапей увеличивается в размерах и становится самоым большим и развитым греческим городом Боспора. Немалую роль в этом сыграли новые греческие переселенцы из Ионии, которые были вынуждены покинуть родину из-за персидского владычества.
                 </p>
                 <h3 class="title--h3">
-                   Нимфей, Гермонасса, Фанагория и другие города
+                   Нимфей и другие города
                 </h3>
                 <p>
                    В 580-550 гг. до н.э. в Восточном Крыму и на Тамани появилось несколько крупных поселений: Нимфей, Феодосия, Гермонасса, Кепы и в 543 г. до н.э. - Фанагория. Все они были независимыми греческими полисами, основанными греками-ионийцами.
+                </p>
+                 <p>
+                    Многие греческие города Восточного Крыма и Тамани были меньшими по размерам и влиянию, а также, скорее всего, не имели свободного статуса. Как предполагается, некоторые из них, такие как Тиритака, Мирмекий и Порфмий были основаны Пантикапеем. 
                 </p>
                 <p>
                    Нимфей находился на мысу, в северной части современного микрорайона Героевка города Керчь. Через Нимфейский мыс начиналась одна из так называемых «киммерийских» переправ через пролив Боспор. Округа Нимфея была богата плодородными землями и водными ресурсами, которые привлекали новых греческих колонистов. 
@@ -315,6 +318,9 @@
                 <p>
                     Феодосия была основана милетскими колонистами в 570-550 гг. до н.э. на берегу удобной гавани, которая, как сообщает Страбон, могла вмещать до 100 кораблей. Сельская округа Феодосии также обладала богатыми плодородными землями и водными ресурсами. 
                 </p>
+                <h3 class="title--h3">
+                   Города Азиатской части Боспора
+                </h3>
                 <p>
                    Гермонасса была одной из самых первых греческих колоний на Тамани. По одной из версий, поселение было основано греками-эолийцами под предводительством Семандра из Митилены. После его смерти граждан возглавила его жена Гермонасса, в честь которой и был назван город. 
                 </p>
@@ -326,9 +332,6 @@
                 </p>
                 <p>
                    Исследователи считают, что в античный период уровень моря был ниже современного примерно на 3,5 метра, поэтому остатки Фанагории, Гермонассы многих греческих городов Боспора сегодня частично находятся под водой. При этом дельта Кубани была более полноводной и имела несколько проток и рукавов, образующих ряд островов. Тамань также представляла собой остров, отделенный от материка дельтой Кубани. 
-                </p>
-                <p>
-                    Многие греческие города Восточного Крыма и Тамани были меньшими по размерам и влиянию, а также, скорее всего, не имели свободного статуса. Как предполагается, некоторые из них, такие как Тиритака, Мирмекий и Порфмий были основаны Пантикапеем. 
                 </p>
             </div>
             <div class="kimmeric__picture-container picture--container">
@@ -407,11 +410,26 @@
                 <p>
                     Вероятнее всего Археанактиды являлись боспорской аристократической династией, которая была связана с отправлением культа Аполлона. Основателем династии считается выходец из Милета Археанакт. Он был ойкистом греческой колонии и утвердил культ Аполлона на Боспоре.  
                 </p>
+                <h3 class="title--h3">
+                Возвышение Пантикапея
+                </h3>
                 <p>
-                    Пантикапей при Археанактидах превращается в один из самых больших городов Северного Причерноморья. Под его влиянием находились менее крупные города и поселения по обе стороны пролива. Пантикапей выпускал собственные монеты. Также имели хождение монеты, которые, как предполагается были связаны с Археанактидами и храмом Аполлона в Пантикапее.
+                    Пантикапей при Археанактидах превращается в один из самых больших городов Северного Причерноморья. Под его влиянием находились менее крупные города и поселения по обе стороны пролива, такие как Тиритака, Корокондама и Гермонасса. Примерно в это время происходит трансформация географического названия Боспор, которое стало обозначать не только морской пролив, но и государственное образование со столицей в Пантикапее.
                 </p>
                 <p>
-                    Не менее значимым и крупным городом была Фанагория. Она находилась в начале большого торгового пути, который вёл в Синдику и далее на территорию меотских племён Прикубанья. Ещё одним важным пунктом этого пути был город Лабрис. Этот греческий город считается одной из столиц царей Синдики.<br>Возле Фанагории и Лабриса располагались крупные курганы с богатыми гробницами, где были похоронены синдские аристократы. Среди них своими размерами и богатством выделяются так называемые Семибратние курганы.
+                    В Пантикапее было развито бронзолитейное производство, а также изготовление ювелирных изделий в зверином стиле, которые пользовались спросом в среде варварской аристократии. Золотые обкладки парадных мечей и другие украшения, иготовленные в том числе в Пантикапее часто находят в скифских курганах Северного Причерноморья. Предполагается, что подобные изделия являлись дипломатическими подарками со стороны греческих полисов. В Пантикапее также производились предметы вооружения, такие как наборные чешуйчатые панцири, копья и стрелы, мечи и кинжалы.
+                </p>
+                <p>
+                    Акрополь Пантикапея находился на Западном плато Первого Кресла горы Митридат. Он был окружён оборонительными стенами. Территория акрополя была застроена монументальными постройками с каменными цоколями и подвалами. На верхнем плато акрополя располагался храм Аполлона Иетроса-Врача.
+                </p>
+                <h3 class="title--h3">
+                Фанагория и Синдика
+                </h3>
+                <p>
+                    Не менее значимым и крупным городом была Фанагория. Она находилась в начале большого торгового пути, который вёл в Синдику и далее на территорию меотских племён Прикубанья. 
+                </p>
+                <p>
+                    Ещё одним важным пунктом этого пути был город Лабрис. Этот греческий город считается одной из столиц царей Синдики. Возле Фанагории и Лабриса располагались крупные курганы с богатыми гробницами, где были похоронены синдские аристократы. Среди них своими размерами и богатством выделяются так называемые Семибратние курганы.
                 </p>
             </div>
             <div class="kimmeric__picture-container-left picture--container">
@@ -473,7 +491,7 @@
             </h2>
             <div class="spartok__text">
                 <h3 class="title--h3">
-                    Первые Спартокиды: Спарток I и Сатир I
+                    Спарток I: основание новой династии
                 </h3>
                 <p>
                     Как сообщает Диодор Сицилийский, в 438/437 г. до н.э. Боспором начал править новый правитель Спарток, который сменил Археанактидов. Предполагается, что они были изгнаны из Пантикапея и переместились в Феодосию. Дата прихода к власти Спартока может быть неточной, тем не менее, новый правитель положил начало долгому и успешному правлению боспорской династии Спартокидов.
@@ -484,6 +502,9 @@
                 <p>
                     Происхождение Спартока является дискуссионным вопросом. Его имя имеет фракийское происхождение и наиболее вероятно, что он был фракийцем. Существует версия, что Спарток является братом одрисского царя Ситалка, который известен в источниках под именем Спарадок.
                 </p>
+                <h3 class="title--h3">
+                   Сатир I: формирование боспорского государства
+                </h3>
                 <p>
                     Спарток I был у власти около семи лет. После его смерти новым правителем Боспора становится его сын Сатир I. Ему удалось сформировать устойчивую политическую систему правления. Она была основана на тиранической власти правителя и подчинённых ему сатрапов, которыми были близкие родственники Сатира. Влияние семейных связей внутри боспорской династии было очень большим. Активное участие в управлении государством принимали сыновья Сатира I - Левкон, Метродор и Горгипп. Кроме них, определённая доля власти находилась в руках так называемых парадинастов - членов правящей династии и их родственников. 
                 </p>
@@ -554,7 +575,7 @@
                             СИМВОЛИКА САТИРА НА МОНЕТАХ ПАНТИКАПЕЯ<br>https://bosporan-kingdom.com/
                         </p>
                         <p>
-                            В конце правления Сатира I на монетах Пантикапея появляется новая символика в виде повернутой головы бородатого сатира с венком на голове. В частности, это изображение было нанесено на пантикапейскую медную лепту. Символ сатира в разных вариациях вскоре становится основным типом изображений на монетах боспорской чеканки. 
+                            В конце правления Сатира I на монетах Пантикапея появляется новая символика в виде повернутой головы бородатого сатира с венком на голове. В частности, это изображение было нанесено на пантикапейскую медную лепту. Символ сатира в разных вариациях вскоре становится основным типом изображений на монетах боспорской чеканки. Предполагается, что символика сатиров была связана с династией Спартокидов. 
                         </p>
                     </div>
                 </div>
@@ -575,7 +596,22 @@
                     Левкон I: покорении Феодосии и Синдики
                 </h3>
                 <p>
-                    Левкон I начал своё правление в достаточно сложных условиях. Продолжалась неудачная война с Феодосией.   
+                    Левкон I начал своё правление в достаточно сложных условиях. Продолжалась неудачная война с Феодосией. В Синдике положение царя Гекатея, союзника Боспора, было шатким. Объединенённые меотские племена во главе с Тиргатао готовились к новой схватке. У них в заложниках находился сын Сатира I и младший брат Левкона Метродор, который вскоре был убит. Среди боспорских военноначальников складывается заговоро против самого Левкона.     
+                </p>
+                <P>
+                    Тем не менее, Левкону I удалось достаточно быстро выйти из сложного положения. Заговор был раскрыт и подавлен. Война с Феодосией вскоре возобновилась. Город был повторно осаждён. Флот Гераклеи Понтийской безуспешно пытался снять блокаду и проводить десантные операции. Около 385 г. до н.э. Феодосия пала и вошла в состав Боспора.
+                </P>
+                <P>
+                    Феодосия имела большое значение для боспорского государства. Этот город имел прекрасную гавань, а её сельская территория была богата плодородными землями. Торговый порт Феодосии стал главным транспортным хабом в экспортной продаже зерна в Афины и другие греческие города. Важность города отражалась в титуле Левкона I, который звучал как «архонт Боспора и Феодосии».  
+                </P>
+                <P>
+                    Левкону I также удалось изменить ситуацию в Синдике. Главную роль там играл Горгипп, брат Левкона. Ему удалось договориться о мире с меотами и разделить сферы влияния в Нижнем Прикубанье. Боспор получил контроль над Синдикой и городами Фанагория, Лабрис и Синдская Гавань, которая была переименована в Горгиппию. Также под протекторат боспорского правителя перешли племена торетов, дандариев и псессов. Это произошло около 370-365 гг. до н.э. после смерти царя Гекатея. 
+                </P>
+                <P>
+                    После присоединения Фанагории, Синдики и части территории Нижнего Прикубанья, Боспор получил полный контроль над важным торговым путём, ведущим в земли меотов. По этому пути велась торговля зерном, произведённым в меотских плодородных долинах Прикубанья. Горгиппия и Фанагория достаточно быстро становятся большими торговыми и ремесленными центрами региона. 
+                </P>
+                <p>
+                    Правление Левкона I было очень успешным. Боспор превращается в крупную региональную державу, объединившую культурные, производственные и сельскохозяйственные ресурсы греческих городов и местного варварского населения Восточного Крыма и Прикубанья. 
                 </p>
             </div>
             <div class="spartok__picture-container-left picture--container">
@@ -632,7 +668,7 @@
                           ЗОЛОТЫЕ СТАТЕРЫ БОСПОРА<br>https://bosporan-kingdom.com/
                         </p>
                         <p>
-                           Во время правления Левкона I начинается чеканка боспорских золотых статеров. 
+                           Во время правления Левкона I начинается чеканка боспорских золотых статеров. Вес монет составлял около 9 гр, диаметр 19-20 мм. На них было нанесено изображение головы сатира в профиль. Другая сторона монеты несла своеобразный герб Боспора в виде стоящего на колосе грифона с копьем в пасти и буквами П А N, означающими город Пантикапей.   
                         </p>
                     </div>
                 </div>
@@ -653,7 +689,19 @@
                     Перисад I: «Золотой век» Боспора
                 </h3>
                 <p>
-                    Правление Перисада I считается «золотым веком» Боспора, временем процветания и благополучия.
+                    Правление Перисада I считается «золотым веком» Боспора, временем процветания и благополучия. Перисад был сыном царя Левкона I, умершего в 349/348 г. до н.э. После его смерти Боспором правил Спарток II, ещё один сын Левкона, совместно со своим братом Перисадом. В 344/343 г. до н.э. начинается единоличное правление Перисада I.  
+                </p>
+                <P>
+                    Перисад I проводил успешную политику и сохранял контроль Боспора над Восточным Крымом и Прикубаньем. Его власть представляла собой тиранию, опирающуюся на парадинастов - членов правящей династии Спартокидов и их родственников. Боспорский правитель обладал властью архонта по отношению к греческому населению Боспора и царской властью для подчинённых Боспору варварских племён.
+                </P>
+                <p>
+                    Расширение влияния Боспора в степях Восточного Крыма, по всей видимости было остановлено в результате войны со скифами в 330-320 гг. до н.э. В ходе этого конфликта были разорены многие сельские поселения округи Панткапея и Нимфея.
+                </p>
+                <P>
+                    Столица Боспора город Пантикапей представлял собой развитый культурный город, где существовал театр, прекрасные храмы и общественные здания. В 330-300 гг. до н.э. в Пантикапее работал философ мегарской школы Дифил Боспорит, а также философ Смикр.
+                </P>
+                <p>
+                    Перисад I умер в 310/309 г. до н.э. После его смерти он был обожествлён потомками в честь признания его заслуг в деле укрепления могущества Боспора.
                 </p>
             </div>
             <div class="spartok__picture-container-2 picture--container">
@@ -672,7 +720,7 @@
                           КРАСНОФИГУРНАЯ ПЕЛИКА С ДИОНИСИЙСКОЙ СЦЕНОЙ<br>400-300 гг. до н.э.<br>Государственный Эрмитаж
                         </p>
                         <p>
-                            Культ Диониса/Вакха был широко распространён в античном мире, в том числе и на Боспоре. Спутники Диониса - сатиры 
+                            Культ Диониса/Вакха был широко распространён в античном мире, в том числе и на Боспоре. Считается, что рост популярности культа Диониса и его спутников - сатиров и селенов, произошёл после начала правления династии Спартокидов.  
                         </p>
                     </div>
                 </div>
@@ -691,7 +739,7 @@
                           ПУЛЕНЦОВСКИЙ КЛАД ЗОЛОТЫХ СТАТЕРОВ<br>https://bosporan-kingdom.com/
                         </p>
                         <p>
-                            
+                            В 1845 г. есаул Ефим Пуленцов во время земляных работ на территории бывшей турецкой крепости в станице Тамань обнаружил клад золотых монет в количестве 21 штук. Возможно, монет в кладе было больше. Они лежали в расписной аттической вазе. В составе клада находились золотые статеры чеканки Пантикапея разныз типов и несколько кизикинов из электра. Вероятно, этот клад был оставлен жителем античной Гермонассы около 340-325 гг. до н.э.  
                         </p>
                     </div>
                 </div>
@@ -721,6 +769,15 @@
                 </h3>
                 <p>
                     Правление первых Спартокидов отличалось значительным ростом государства и экономическим процветанием. Одним из проявлений этого «золотого века» Боспора являются величественные гробницы боспорской аристократии.
+                </p>
+                <p>
+                    Датировка элитных погребений Боспора имеет много допущений и неточностей. Она основана на определении датирующих вещей и керамики из погребального инвентаря гробниц. Условно можно выделить несколько групп боспорских погребений IV-III вв. до н.э.
+                </p>
+                <P>
+                    Погребения 400-375 гг. до н.э. 
+                </P>
+                <p>
+                    Баксинский курган - предполагаемая гробница Сатира I. Дата совершения погребения - около 400-390 гг. до н.э.
                 </p>
             </div>
         </section>
