feat (hnml css): add element "large-picture-container

--- a/index.html
+++ b/index.html
@@ -697,6 +697,15 @@
                 <p>
                     Расширение влияния Боспора в степях Восточного Крыма, по всей видимости было остановлено в результате войны со скифами в 330-320 гг. до н.э. В ходе этого конфликта были разорены многие сельские поселения округи Панткапея и Нимфея.
                 </p>
+                <p>
+                    Сведения о границах влияния Боспора в последнее десятилетие правления Перисада I содержатся в его официальном титуле: «архонт Боспора и Феодосии, царь синдов, маитов, фатеев и досхов». В понятие Боспор, по всей видимости, включались Нимфей, Китей и другие города прибрежной части Восточного Крыма. Феодосия и её ближняя округа занимали территорию прилегающую к Феодосийскому заливу. Вопрос о контроле Боспора над поселениями речных долин Акмонайского перешейка является дискуссионным.      
+                </p>
+                <p>
+                    Территория синдов очевидно локализуется в Синдике. Эта область имеет очень широкие границы в пределах Таманского полуострова и Нижнего Прикубанья, включая такие города, как Фанагория, Гермонасса, Лабрис и Горгиппия. 
+                </p>
+                <p>
+                    Маиты, фатеи и досхи
+                </p>
                 <P>
                     Столица Боспора город Пантикапей представлял собой развитый культурный город, где существовал театр, прекрасные храмы и общественные здания. В 330-300 гг. до н.э. в Пантикапее работал философ мегарской школы Дифил Боспорит, а также философ Смикр.
                 </P>
@@ -763,6 +772,52 @@
                     </div>
                 </div>
             </div>
+            <div class="spartok__large-picture-container picture--container large-picture--container">
+                <picture>
+                    <source srcset="./Images/Kul-Oba_disk__348x748.avif" 
+                    type="image/avif">
+                    <img class="picture--img" 
+                    src="./Images/Kul-Oba_disk__348x748.webp" 
+                    alt="Золотой диск с подвесками. Курган Куль-Оба" 
+                    loading="lazy" 
+                    width="348" height="748">
+                </picture>
+                <div class="picture--description">
+                    <p>
+                        КУРГАН КУЛЬ-ОБА<br>Золотые украшения: диск с подвесками, пластина в виде фигуры оленя, сосуд с изображениями скифов, Наконечник шейной гривны<br>Государственный Эрмитаж
+                    </p>
+                    <p>
+                        Скарабеоид из сердолика с резьбой, на подвижной золотой дужке с изображением оленя, 400-300 гг. до н.э.<br>Подобные печати-штампы были широко распространены в античном мире 
+                    </p>
+                </div>
+                <picture>
+                    <source srcset="./Images/Kul-Oba_grivna__1036x464.avif" 
+                    type="image/avif">
+                    <img class="picture--img" 
+                    src="./Images/Kul-Oba_grivna__1036x464.webp" 
+                    alt="Наконечник шейной гривны. Курган Куль-Оба" 
+                    loading="lazy" 
+                    width="1036" height="464">
+                </picture>
+                <picture>
+                    <source srcset="./Images/Kul-Oba_deer__1004x596.avif" 
+                    type="image/avif">
+                    <img class="picture--img" 
+                    src="./Images/Kul-Oba_deer__1004x596.webp" 
+                    alt="Золотая пластина в виде фигуры оленя. Курган Куль-Оба" 
+                    loading="lazy" 
+                    width="1004" height="596">
+                </picture>
+                <picture>
+                    <source srcset="./Images/Kul-Oba__701x876.avif" 
+                    type="image/avif">
+                    <img class="picture--img" 
+                    src="./Images/Kul-Oba__701x876.webp" 
+                    alt="Золотой сосуд. Курган Куль-Оба" 
+                    loading="lazy" 
+                    width="701" height="876">
+                </picture>
+            </div>
             <div class="spartok__text-4">
                 <h3 class="title--h3">
                     Гробницы боспорской аристократии
@@ -779,6 +834,52 @@
                 <p>
                     Баксинский курган - предполагаемая гробница Сатира I. Дата совершения погребения - около 400-390 гг. до н.э.
                 </p>
+            </div>
+            <div class="spartok__large-picture-container-2 picture--container large-picture--container">
+                <picture>
+                    <source srcset="./Images/Bolshaya-Bliznitsa__989x552.avif" 
+                    type="image/avif">
+                    <img class="wide-picture--img" 
+                    src="./Images/Bolshaya-Bliznitsa__989x552.webp" 
+                    alt="Раскопки Курган Большая Близница" 
+                    loading="lazy" 
+                    width="989" height="552">
+                </picture>
+                <div class="picture--description">
+                    <p>
+                        КУРГАН БОЛЬШАЯ БЛИЗНИЦА<br>Рисунок раскопок 1864 г. Роспись склепа №2 - «склеп Деметры», золотые украшения: пектораль и височные подвески<br>Государственный Эрмитаж
+                    </p>
+                    <p>
+                        Скарабеоид из сердолика с резьбой, на подвижной золотой дужке с изображением оленя, 400-300 гг. до н.э.<br>Подобные печати-штампы были широко распространены в античном мире 
+                    </p>
+                </div>
+                <picture>
+                    <source srcset="./Images/Bolshaya-Bliznitsa_Demetra__833x650.avif" 
+                    type="image/avif">
+                    <img class="picture--img" 
+                    src="./Images/Bolshaya-Bliznitsa_Demetra__833x650.webp" 
+                    alt="Роспись склепа Деметры. Курган Большая Близница" 
+                    loading="lazy" 
+                    width="833" height="650">
+                </picture>
+                <picture>
+                    <source srcset="./Images/Bolshaya-Bliznitsa_pectoral__728x640.avif" 
+                    type="image/avif">
+                    <img class="picture--img" 
+                    src="./Images/Bolshaya-Bliznitsa_pectoral__728x640.webp" 
+                    alt="Золотая пектораль. Курган Большая Близница" 
+                    loading="lazy" 
+                    width="728" height="640">
+                </picture>
+                <picture>
+                    <source srcset="./Images/Bolshaya-Bliznitsa_earrings__694x608.avif" 
+                    type="image/avif">
+                    <img class="picture--img" 
+                    src="./Images/Bolshaya-Bliznitsa_earrings__694x608.webp" 
+                    alt="Золотые подвески. Курган Большая Близница" 
+                    loading="lazy" 
+                    width="694" height="608">
+                </picture>
             </div>
         </section>
     </main>
