feat (html): add block "large-picture-container"

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     </header>
     <main class="content">
         <h1 class="title--h1">Боспорское царство</h1>
-        <section class="intro">
+        <section class="intro section--container">
             <div class="intro-container">
                 <div>
                     <p>
@@ -148,8 +148,7 @@
                             </div>
                             <div class="intro__nav-description">
                                 <p>
-                                    появление греческих городов-государств Боспора.<br>
-                                    Пантикапей и Археанактиды
+                                    появление греческих городов Боспора, Пантикапей и Археанактиды
                                 </p>
                             </div>
                         </li>
@@ -172,8 +171,7 @@
                             </div>
                             <div class="intro__nav-description">
                                 <p>
-                                    первая боспорская династия Спартокидов.<br>
-                                    “Золотой век” Боспора
+                                    первая боспорская династия Спартокидов, “Золотой век” Боспора
                                 </p>
                             </div>
                         </li>
@@ -203,8 +201,7 @@
                             </div>
                             <div class="intro__nav-description">
                                 <p>
-                                    Митридат Евпатор, его протекторат и наследники.<br>
-                                    Борьба с Римом
+                                    Митридат Евпатор, его протекторат и наследники, борьба с Римом
                                 </p>
                             </div>
                         </li>
@@ -225,8 +222,7 @@
                             </div>
                             <div class="intro__nav-description">
                                 <p>
-                                    новая боспорская династия Тибериев Юлиев.<br>
-                                    Отношения с Римом
+                                    новая боспорская династия Тибериев Юлиев, отношения с Римом
                                 </p>
                             </div>
                         </li>
@@ -247,8 +243,7 @@
                             </div>
                             <div class="intro__nav-description">
                                 <p>
-                                    Боспор позднеримского времени<br>
-                                    и эпохи Великого переселения народов
+                                    Боспор позднеримского времени и эпохи Великого переселения народов
                                 </p>
                             </div>
                         </li>
@@ -772,8 +767,8 @@
                     </div>
                 </div>
             </div>
-            <div class="spartok__large-picture-container picture--container large-picture--container">
-                <picture>
+            <div class="spartok__large-picture-container large-picture--container">
+                <picture class="kul-oba-1">
                     <source srcset="./Images/Kul-Oba_disk__348x748.avif" 
                     type="image/avif">
                     <img class="picture--img" 
@@ -782,15 +777,15 @@
                     loading="lazy" 
                     width="348" height="748">
                 </picture>
-                <div class="picture--description">
+                <div class="picture--description kul-oba-description">
                     <p>
-                        КУРГАН КУЛЬ-ОБА<br>Золотые украшения: диск с подвесками, пластина в виде фигуры оленя, сосуд с изображениями скифов, Наконечник шейной гривны<br>Государственный Эрмитаж
+                        КУРГАН КУЛЬ-ОБА<br>Золотые украшения: диск с подвесками, наконечник шейной гривны, пластина в виде фигуры оленя, сосуд с изображениями скифов<br>Государственный Эрмитаж
                     </p>
                     <p>
                         Скарабеоид из сердолика с резьбой, на подвижной золотой дужке с изображением оленя, 400-300 гг. до н.э.<br>Подобные печати-штампы были широко распространены в античном мире 
                     </p>
                 </div>
-                <picture>
+                <picture class="kul-oba-2">
                     <source srcset="./Images/Kul-Oba_grivna__1036x464.avif" 
                     type="image/avif">
                     <img class="picture--img" 
@@ -799,7 +794,7 @@
                     loading="lazy" 
                     width="1036" height="464">
                 </picture>
-                <picture>
+                <picture class="kul-oba-3">
                     <source srcset="./Images/Kul-Oba_deer__1004x596.avif" 
                     type="image/avif">
                     <img class="picture--img" 
@@ -808,7 +803,7 @@
                     loading="lazy" 
                     width="1004" height="596">
                 </picture>
-                <picture>
+                <picture class="kul-oba-4">
                     <source srcset="./Images/Kul-Oba__701x876.avif" 
                     type="image/avif">
                     <img class="picture--img" 
@@ -835,8 +830,8 @@
                     Баксинский курган - предполагаемая гробница Сатира I. Дата совершения погребения - около 400-390 гг. до н.э.
                 </p>
             </div>
-            <div class="spartok__large-picture-container-2 picture--container large-picture--container">
-                <picture>
+            <div class="spartok__large-picture-container-2 large-picture--container">
+                <picture class="bliz-1">
                     <source srcset="./Images/Bolshaya-Bliznitsa__989x552.avif" 
                     type="image/avif">
                     <img class="wide-picture--img" 
@@ -845,7 +840,7 @@
                     loading="lazy" 
                     width="989" height="552">
                 </picture>
-                <div class="picture--description">
+                <div class="picture--description bliz-description">
                     <p>
                         КУРГАН БОЛЬШАЯ БЛИЗНИЦА<br>Рисунок раскопок 1864 г. Роспись склепа №2 - «склеп Деметры», золотые украшения: пектораль и височные подвески<br>Государственный Эрмитаж
                     </p>
@@ -853,7 +848,7 @@
                         Скарабеоид из сердолика с резьбой, на подвижной золотой дужке с изображением оленя, 400-300 гг. до н.э.<br>Подобные печати-штампы были широко распространены в античном мире 
                     </p>
                 </div>
-                <picture>
+                <picture class="bliz-2">
                     <source srcset="./Images/Bolshaya-Bliznitsa_Demetra__833x650.avif" 
                     type="image/avif">
                     <img class="picture--img" 
@@ -862,7 +857,7 @@
                     loading="lazy" 
                     width="833" height="650">
                 </picture>
-                <picture>
+                <picture class="bliz-3">
                     <source srcset="./Images/Bolshaya-Bliznitsa_pectoral__728x640.avif" 
                     type="image/avif">
                     <img class="picture--img" 
@@ -871,7 +866,7 @@
                     loading="lazy" 
                     width="728" height="640">
                 </picture>
-                <picture>
+                <picture class="bliz-4">
                     <source srcset="./Images/Bolshaya-Bliznitsa_earrings__694x608.avif" 
                     type="image/avif">
                     <img class="picture--img" 
